@@ -2,6 +2,9 @@ mountall (2.14) UNRELEASED; urgency=low
 
   * Flush updates to Plymouth before emitting Upstart events, in case
     the event kills Plymouth.  LP: #559761.
+  * Don't mark a filesystem "nodev" just because it's got "none" in the
+    device column; this will block the "virtual-filesystems" event which
+    is the one that can't use Plymouth to prompt.  LP: #507881.
 
  -- Scott James Remnant <scott@ubuntu.com>  Fri, 16 Apr 2010 14:36:49 -0700
 
